[metadata]
name = pybbox
version = 0.0.5-alpha
author = Hydreliox
author_email = hydreliox@gmail.com
description = a simple python3 library for the Bouygues BBox Routeur API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/HydrelioxGitHub/pybbox
project_urls =
    Bug Tracker = https://github.com/HydrelioxGitHub/pybbox/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src



#   install_requires = ['netaddr','requests'],
#   download_url = 'https://github.com/HydrelioxGitHub/pybbox/tarball/0.0.5-alpha',
#   keywords = ['bbox', 'Bouygues', 'routeur', 'API'], # arbitrary keywords
